--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@nuxt/ui": "^3.2.0",
+    "graphql": "^16.11.0",
     "nuxt": "^4.0.0",
+    "nuxt-graphql-request": "^8.1.1",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
