--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "graphql": "^16.11.0",
     "nuxt": "^4.0.0",
     "nuxt-graphql-request": "^8.1.1",
+    "reka-ui": "^2.4.0",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@iconify-json/guidance": "^1.2.2",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "nuxt-icon": "^1.0.0-beta.7",
+    "vite": "^7.0.6"
   }
 }
